# dibi_voice_pad

./: .gitignore  build_with_pyinstaller.py  main.py  pyproject.toml
src/core/: audio_engine.py  audio_utils.py  config_manager.py  device_manager.py
src/ui/: main_window.py  mixer_interface.py  music_interface.py  setting_interface.py
src/utils/: i18n.py  logger.py
