[project]
name = "audio-mix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.15",
    "numpy>=2.4.2",
    "proc-tap>=1.0.3",
    "psutil>=7.2.2",
    "pyaudiowpatch>=0.2.12.8",
    "pyqt6>=6.10.2",
    "pyqt6-fluent-widgets>=1.11.1",
    "pywin32>=311",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
